tests/engine/Mocks/InvalidFoo/BadListener.php
<?php

namespace Minetro\Tests\Mocks\InvalidFoo;

final class BadListener
{

}
